# pptx

./: .gitignore  README.md  motilal_data.json  motilal_model.csv  muscle-plan.md  project-blueprint.md  pyproject.toml  team-execution-plan.md
.claude/: settings.local.json
assets/disclaimers/: analyst_certification.md  tikona_default.md
assets/themes/: brand_theme.json
output/2026-04-28_184427_abc_393c40802237/: manifest.json
output/2026-04-28_184440_abc_83da8a3100ee/: manifest.json
output/2026-04-28_184800_abc_ea2f43acaccb/: manifest.json
output/2026-04-28_184801_abc_eecd01c7f310/: manifest.json
output/2026-04-28_184801_xyz_8ddd5491e44c/: manifest.json
output/2026-04-28_184812_abc_d02bb211d45d/: manifest.json
output/2026-04-28_184812_xyz_cb32e5cd7a63/: manifest.json
output/2026-05-01_135012_abc_5897945f26c9/: manifest.json
output/2026-05-01_135012_abc_f38fc19eaf2f/: manifest.json
output/2026-05-01_135012_xyz_04781006b978/: manifest.json
output/2026-05-01_135750_abc_2d0ced1aa867/: manifest.json
output/2026-05-01_135750_abc_ebebdcce0e6a/: manifest.json
output/2026-05-01_135750_xyz_2943bcfa207d/: manifest.json
output/2026-05-01_141048_abc_0c32c7c405e5/: manifest.json
output/2026-05-01_141048_abc_32a1493ab4ce/: manifest.json
output/2026-05-01_141048_motilalofs_58f5705250cd/: manifest.json
output/phase10-motilal/: motilal.pptx
tests/: test_bundle_loading.py  test_layout_registry.py  test_pdf_converter.py  test_pipeline.py  test_regression.py  test_render_checks.py  test_renderer.py  test_report_builder.py  test_slide_planning.py
(+674 files in other folders)
